minor-changes & tooltips

--- a/src/components/StatusPage/StatusPage.css
+++ b/src/components/StatusPage/StatusPage.css
@@ -4,8 +4,7 @@
   margin-left: auto;
   padding: 2em;
   margin: 2em auto;
-  max-height: 700px;
-  overflow-y: scroll;
+  margin-top: 6em;
   box-shadow: inset 0px 0px 20px rgba(0, 0, 0, 0.384);
   background-color: white;
 }
