--- a/src/components/StatusInformation/StatusInformation.css
+++ b/src/components/StatusInformation/StatusInformation.css
@@ -2,10 +2,16 @@
   max-width: 800px;
   margin: 1em auto;
 }
-.service-information h1, .service-information p {
+.service-information h2, .service-information p {
   color: white;
   margin: 1em auto;
   text-align: center;
+}
+.service-information h2 {
+  font-size: 2.675rem;
+}
+.service-information p {
+  font-size: 1.25rem;
 }
 .service-information .filter-types {
   display: flex;
