--- a/src/components/StatusInformation/StatusInformation.scss
+++ b/src/components/StatusInformation/StatusInformation.scss
@@ -3,18 +3,18 @@
     max-width: 800px;
     margin: 1em auto;
 
-    h1, p{
+    h2, p{
         color: white;
         margin: 1em auto;
         text-align: center;
     }
 
-    h1{
-
+    h2{
+        font-size: 2.675rem;
     }
 
     p{
-
+        font-size: 1.25rem;
     }
 
     .filter-types{
