--- a/src/index.css
+++ b/src/index.css
@@ -121,22 +121,50 @@ body {
 	border-color: #ffffff;
 }
 
+.tooltiptext {
+	visibility: hidden;
+	width: 120px;
+	background-color: black;
+	color: #fff;
+	text-align: center;
+	border-radius: 6px;
+	padding: 5px 0;
+  
+	position: absolute;
+	z-index: 1;
+	top: 89%;
+	margin-left: -70px;
+  }
+  
+
+
 .type-fully-operational{
 	background-color: #b4fe8a;
 }
-
+.type-fully-operational:hover .tooltiptext {
+	visibility: visible;
+  }
 .type-semi-operational{	
 	background-color: #fef68a;
 }
-
+.type-semi-operational:hover .tooltiptext {
+	visibility: visible;
+  }
 .type-offline{
 	background-color: #fea18a;
 }
-
+.type-offline:hover .tooltiptext {
+	visibility: visible;
+  }
 .type-unknown{
 	background-color: #b6b6b6;
 }
-
+.type-unknown:hover .tooltiptext {
+	visibility: visible;
+  }
 .type-reset{
 	background-color: #ffffff;
 }
+.type-reset:hover .tooltiptext {
+	visibility: visible;
+  }
