--- a/src/components/StatusList/StatusList.scss
+++ b/src/components/StatusList/StatusList.scss
@@ -5,6 +5,17 @@
 		auto-fill,
 		minmax(250px, 1fr)
 	);
+
+	max-width: 960px;
+	margin-right: auto;
+	margin-left: auto;
+	padding: 2em;
+	
+	margin: 2em auto;
+	margin-top: 6em;
+
+	box-shadow: inset 0px 0px 20px rgba(0, 0, 0, 0.384);
+	background-color: white;
 }
 
 ul{
