--- a/src/components/StatusSearch/StatusSearch.css
+++ b/src/components/StatusSearch/StatusSearch.css
@@ -1,4 +1,4 @@
-.search-container {
+.status-search-container {
   margin-top: 2em;
 }
 
@@ -100,4 +100,4 @@
 
 .type-reset:hover .tooltiptext {
   visibility: visible;
-}/*# sourceMappingURL=Search.css.map */
+}/*# sourceMappingURL=StatusSearch.css.map */
