--- a/src/components/StatusPreviousElement/StatusPreviousElement.scss
+++ b/src/components/StatusPreviousElement/StatusPreviousElement.scss
@@ -1,25 +1,35 @@
-/* Style the buttons that are used to open and close the accordion panel */
-.accordion {
-    background-color: #eee;
-    color: #444;
-    cursor: pointer;
-    padding: 18px;
-    width: 100%;
-    text-align: left;
-    border: none;
-    outline: none;
-    transition: 0.4s;
+.previous-status-accordian{
+  max-width: 80%;
+  margin: 0 auto;
+  color: black;
+
+  .faq-content{
+
+      max-width: 600px;
+      padding: 0;
+      margin: 0 auto;
+      text-align: center;
   }
-  
-  /* Add a background color to the button if it is clicked on (add the .active class with JS), and when you move the mouse over it (hover) */
-  .active, .accordion:hover {
-    background-color: #ccc;
+  .faq-text{
+      padding: 0;
+      padding-left:2em;
+      padding-right:2em;
+      margin: 2em auto;
   }
-  
-  /* Style the accordion panel. Note: hidden by default */
-  .panel {
-    padding: 0 18px;
-    background-color: white;
-    display: none;
-    overflow: hidden;
+  .terms-links{
+      display: flex;
+      margin: 0 auto;
+      .terms-links > *{
+          background-color:pink;
+      }
   }
+
+  p{
+      color: black;
+  }
+  .card{
+    .previous-status-content > *{
+      color: black;
+    }
+  }
+}
