--- a/src/index.css
+++ b/src/index.css
@@ -8,13 +8,19 @@ body {
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 	user-select: none;
-	min-height: 100vh;
+	
+	min-width: 100vw;
+    min-height: 100vh;
+    max-width:100%;
+	overflow-x: hidden;
 }
 
-.container{
+.app-container{
 	background-color: rgb(255, 49, 87);
 	padding-bottom: 4em;
-	overflow-y: hidden;
+	overflow: hidden;
+	margin: 0 auto;
+
 }
 
 
@@ -40,19 +46,24 @@ body {
 	color: white;
 }
 
-.dark-mode .container{
+.dark-mode .app-container{
 	background-color: rgb(100, 95, 95);
 
 }
 
-.dark-mode .container .header{
+.dark-mode .app-container .header{
 	background-color: rgb(61, 61, 61);
 
 }
 
-.dark-mode .container .status-page{
+.dark-mode .app-container 
+.status-list{
 	background-color: rgb(75, 72, 72);
+}
 
+.dark-mode .app-container 
+.status-previous-list{
+	background-color: rgb(75, 72, 72);
 }
 
 
@@ -61,7 +72,8 @@ body {
 	border: none;
 	border-radius: 15px;
 	padding: 5px 10px 5px 10px;
-	margin-right: 0.2em;
+	position: relative;
+	right: 50px;
 	margin-top: 0.2em;
 }
 
