--- a/src/components/StatusElement/StatusElement.css
+++ b/src/components/StatusElement/StatusElement.css
@@ -38,20 +38,14 @@
   transform: scale(1.02);
 }
 
-.notify {
-  background-color: #ffffff;
-  border: none;
-  border-radius: 15px;
-  padding: 5px 10px 5px 10px;
-  transition: transform 0.6s; /* Animation off */
-  transform: scale(1);
-  max-width: 120px;
-}
-
 .notify:hover {
   background-color: #969696;
   color: white;
   transition: transform 0.6s; /* Animation */
   transform: scale(1.02);
   font-style: bold;
+}
+
+.status-container {
+  font-size: 1em;
 }/*# sourceMappingURL=StatusElement.css.map */
