--- a/src/components/StatusPreviousElement/StatusPreviousElement.css
+++ b/src/components/StatusPreviousElement/StatusPreviousElement.css
@@ -1,25 +1,30 @@
-/* Style the buttons that are used to open and close the accordion panel */
-.accordion {
-  background-color: #eee;
-  color: #444;
-  cursor: pointer;
-  padding: 18px;
-  width: 100%;
-  text-align: left;
-  border: none;
-  outline: none;
-  transition: 0.4s;
+.previous-status-accordian {
+  max-width: 80%;
+  margin: 0 auto;
+  color: black;
 }
-
-/* Add a background color to the button if it is clicked on (add the .active class with JS), and when you move the mouse over it (hover) */
-.active, .accordion:hover {
-  background-color: #ccc;
+.previous-status-accordian .faq-content {
+  max-width: 600px;
+  padding: 0;
+  margin: 0 auto;
+  text-align: center;
 }
-
-/* Style the accordion panel. Note: hidden by default */
-.panel {
-  padding: 0 18px;
-  background-color: white;
-  display: none;
-  overflow: hidden;
+.previous-status-accordian .faq-text {
+  padding: 0;
+  padding-left: 2em;
+  padding-right: 2em;
+  margin: 2em auto;
+}
+.previous-status-accordian .terms-links {
+  display: flex;
+  margin: 0 auto;
+}
+.previous-status-accordian .terms-links .terms-links > * {
+  background-color: pink;
+}
+.previous-status-accordian p {
+  color: black;
+}
+.previous-status-accordian .card .previous-status-content > * {
+  color: black;
 }/*# sourceMappingURL=StatusPreviousElement.css.map */
