--- a/src/components/StatusSearch/StatusSearch.css
+++ b/src/components/StatusSearch/StatusSearch.css
@@ -37,6 +37,10 @@
   justify-content: space-between;
 }
 
+.input-range {
+  width: 100%;
+}
+
 .type-element {
   border-radius: 10px;
   padding: 5px;
