--- a/src/components/StatusSearch/StatusSearch.scss
+++ b/src/components/StatusSearch/StatusSearch.scss
@@ -37,6 +37,11 @@
 	justify-content: space-between;
 }
 
+.input-range{
+	width: 100%;
+}
+
+
 .type-element{
 	border-radius: 10px;
 	padding: 5px;
