--- a/src/components/StatusElement/StatusElement.css
+++ b/src/components/StatusElement/StatusElement.css
@@ -1,36 +1,18 @@
 .status {
   margin: 1em;
   padding: 1rem;
-  min-height: 170px;
+  min-height: 120px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   white-space: pre-wrap;
   transition: transform 0.6s; /* Animation off */
   transform: scale(1);
-  border-color: #ffffff;
-  border-radius: 8px;
-  box-shadow: 0px 0px 0px 10px rgb(233, 233, 233), 0px 0px 16px 0px rgba(0, 0, 0, 0.32);
+  background-color: rgb(182, 182, 182);
 }
 .status h1, .status h2 {
   margin-top: 0.2em;
   margin-bottom: 0.2em;
-}
-
-.status-live {
-  background-color: #b4fe8a;
-}
-
-.status-warning {
-  background-color: #fef68a;
-}
-
-.status-offline {
-  background-color: #fea18a;
-}
-
-.status-unknown {
-  background-color: #b6b6b6;
 }
 
 .status:hover {
