--- a/src/components/StatusElement/StatusElement.scss
+++ b/src/components/StatusElement/StatusElement.scss
@@ -62,7 +62,7 @@
 .status{
     margin: 1em;
 	padding: 1rem;
-	min-height: 170px;
+	min-height: 120px;
 	display: flex;
 	flex-direction: column;
 	justify-content: space-between;
@@ -74,32 +74,23 @@
         margin-top: 0.2em;
         margin-bottom: 0.2em;
     }
-
-    border-color: #ffffff;
-    -webkit-border-radius: 8px;
-    -moz-border-radius: 8px;
-    border-radius: 8px;
-    -webkit-box-shadow: 0px 0px 0px 10px rgb(233, 233, 233), 0px 0px 16px 0px rgba(0,0,0,0.32);
-    -moz-box-shadow: 0px 0px 0px 10px rgb(233, 233, 233), 0px 0x 16px 0px rgba(0,0,0,0.32);
-    box-shadow: 0px 0px 0px 10px rgb(233, 233, 233), 0px 0px 16px 0px rgba(0,0,0,0.32);
-
+    background-color: rgb(182, 182, 182);
 }
 
 .status-live {
-	background-color: #b4fe8a;
+	// background-color: #b4fe8a;
 }
 
 .status-warning {
-	background-color: #fef68a;
+	// background-color: #fef68a;
 }
 
 .status-offline {
-	background-color: #fea18a;
+	// background-color: #fea18a;
 }
 
 .status-unknown {
-	background-color: #b6b6b6;
-
+	// background-color: #b6b6b6;
 }
     
 .status:hover{
