--- a/src/components/StatusElement/StatusElement.css
+++ b/src/components/StatusElement/StatusElement.css
@@ -1,14 +1,13 @@
 .status {
   margin: 1em;
   padding: 1rem;
-  min-height: 120px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   white-space: pre-wrap;
   transition: transform 0.6s; /* Animation off */
   transform: scale(1);
-  background-color: rgb(182, 182, 182);
+  border: 1px solid;
 }
 .status h1, .status h2 {
   margin-top: 0.2em;
