--- a/src/components/StatusPod/StatusPod.scss
+++ b/src/components/StatusPod/StatusPod.scss
@@ -24,9 +24,12 @@
     -moz-box-shadow: 0px 0px 0px 10px rgb(233, 233, 233), 0px 0x 16px 0px rgba(0,0,0,0.32);
     box-shadow: 0px 0px 0px 10px rgb(233, 233, 233), 0px 0px 16px 0px rgba(0,0,0,0.32);
 
+    transition: transform .6s; /* Animation off */
+    transform: scale(1);
+
 }
     
-.status:hover{
+.status-pod:hover{
     transition: transform .6s; /* Animation */
     transform: scale(1.02);
 }
