--- a/src/components/StatusList/StatusList.css
+++ b/src/components/StatusList/StatusList.css
@@ -3,7 +3,8 @@
   grid-gap: 1rem;
   grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
   max-width: 960px;
-  overflow: scroll;
+  max-height: 50vh;
+  overflow-y: scroll;
   margin-right: auto;
   margin-left: auto;
   padding: 2em;
