--- a/src/components/StatusList/StatusList.scss
+++ b/src/components/StatusList/StatusList.scss
@@ -7,8 +7,8 @@
 	);
 
 	max-width: 960px;
-	// max-height: 50vh;
-	overflow: scroll;
+	max-height: 50vh;
+	overflow-y: scroll;
 	margin-right: auto;
 	margin-left: auto;
 	padding: 2em;
