--- a/src/components/StatusListAlt/StatusListAlt.css
+++ b/src/components/StatusListAlt/StatusListAlt.css
@@ -1,31 +1,20 @@
-.status-pods {
+.status-list {
   display: grid;
   grid-gap: 1rem;
   grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-  list-style-type: none;
   max-width: 960px;
+  max-height: 50vh;
+  overflow-y: scroll;
+  margin-right: auto;
+  margin-left: auto;
   padding: 2em;
   margin: 2em auto;
-  margin-top: 1;
   box-shadow: inset 0px 0px 20px rgba(0, 0, 0, 0.384);
   background-color: white;
-}
-.status-pods .btn {
-  background-color: #fd4365;
-  color: white;
 }
 
 ul {
   list-style-type: none;
   margin: 0;
   padding: 0;
-}
-
-.modal-close {
-  background-color: #fd4365;
-  color: white;
-}
-
-.card-header > * {
-  float: right;
-}/*# sourceMappingURL=StatusPods.css.map */
+}/*# sourceMappingURL=StatusListAlt.css.map */
