--- a/src/components/StatusPods/StatusPods.scss
+++ b/src/components/StatusPods/StatusPods.scss
@@ -11,7 +11,7 @@
 	max-width: 960px;
 	padding: 2em;
 	margin: 2em auto;
-	margin-top: 6em;
+	margin-top: 1;
 
 	box-shadow: inset 0px 0px 20px rgba(0, 0, 0, 0.384);
 	background-color: white;
