--- a/src/components/StatusSearch/StatusSearch.css
+++ b/src/components/StatusSearch/StatusSearch.css
@@ -1,33 +1,33 @@
 .status-search-container {
-  margin-top: 2em;
+  margin-top: 3em;
 }
 
-.search {
+.search-type-tool-tip {
   display: flex;
   align-items: center;
-  background-color: rgb(233, 233, 233);
+  border-radius: 10px;
+  padding: 8px;
+  max-width: 270px;
+  margin: auto;
+  color: black;
+  justify-content: space-between;
+}
+.search-type-tool-tip .type-element {
   border-radius: 10px;
   padding: 5px;
-  max-width: 500px;
-  margin: 2em auto;
+  width: 40px;
+  height: 40px;
   margin-top: 0;
   color: black;
+  justify-content: space-between;
+  border: 2px solid;
+  border-color: #ffffff;
+  text-align: center;
 }
 
-.search input {
-  border: none;
-  background-color: rgb(233, 233, 233);
-  width: 100%;
-}
-
-.search input:focus {
-  outline: none;
-}
-
-.search-type {
+.search-type-range {
   display: flex;
   align-items: center;
-  background-color: rgb(233, 233, 233);
   border-radius: 10px;
   padding: 8px;
   max-width: 270px;
@@ -43,7 +43,7 @@
 
 .search-type-fully-reset {
   accent-color: #ffffff;
-  background-color: black;
+  background-color: white;
 }
 
 .search-type-fully-operational {
@@ -57,24 +57,13 @@
 }
 
 .search-type-offline {
-  accent-color: #f5e550;
+  accent-color: #ff3157;
   background-color: white;
 }
 
 .search-type-unknown {
   accent-color: #b6b6b6;
   background-color: white;
-}
-
-.type-element {
-  border-radius: 10px;
-  padding: 5px;
-  max-width: 40px;
-  margin-top: 0;
-  color: black;
-  justify-content: space-between;
-  border: 2px solid;
-  border-color: #ffffff;
 }
 
 .tooltiptext {
@@ -87,7 +76,7 @@
   padding: 5px 0;
   position: absolute;
   z-index: 1;
-  top: 75%;
+  top: 80%;
   margin-left: -70px;
 }
 
