--- a/src/components/ToggleSearchStyle/ToggleSearchStyle.css
+++ b/src/components/ToggleSearchStyle/ToggleSearchStyle.css
@@ -1,4 +1,5 @@
 .toggle-search-style {
   margin: auto;
   text-align: center;
+  margin-top: 6em;
 }/*# sourceMappingURL=ToggleSearchStyle.css.map */
