--- a/src/components/StatusPod/StatusPod.scss
+++ b/src/components/StatusPod/StatusPod.scss
@@ -8,6 +8,7 @@
 	white-space: pre-wrap;
     transition: transform .6s; /* Animation off */
     transform: scale(1);
+    background-color: white;
 
     h1,h2, p{
         margin-top: 0.2em;
