--- a/src/components/StatusPod/StatusPod.css
+++ b/src/components/StatusPod/StatusPod.css
@@ -8,6 +8,7 @@
   white-space: pre-wrap;
   transition: transform 0.6s; /* Animation off */
   transform: scale(1);
+  background-color: white;
   border-color: #ffffff;
   border-radius: 8px;
   border-left: 15px solid;
