--- a/src/components/StatusPods/StatusPods.css
+++ b/src/components/StatusPods/StatusPods.css
@@ -8,7 +8,7 @@
   margin: 2em auto;
   margin-top: 1;
   box-shadow: inset 0px 0px 20px rgba(0, 0, 0, 0.384);
-  background-color: white;
+  background-color: rgb(240, 240, 240);
 }
 .status-pods .btn {
   background-color: #fd4365;
