--- a/src/components/StatusPods/StatusPods.scss
+++ b/src/components/StatusPods/StatusPods.scss
@@ -14,7 +14,7 @@
 	margin-top: 1;
 
 	box-shadow: inset 0px 0px 20px rgba(0, 0, 0, 0.384);
-	background-color: white;
+	background-color: rgb(240, 240, 240);
 
 	.btn {
 		background-color: #fd4365;
