lots of minor changes

--- a/src/components/StatusElement/StatusElement.scss
+++ b/src/components/StatusElement/StatusElement.scss
@@ -1,8 +1,5 @@
 .status{
-    margin: 1em;
-	padding: 1rem;
-	display: flex;
-	flex-direction: column;
+    // margin: 1em;
 	justify-content: space-between;
 	white-space: pre-wrap;
     transition: transform .6s; /* Animation off */
@@ -12,7 +9,14 @@
         margin-top: 0.2em;
         margin-bottom: 0.2em;
     }
-    border: 1px solid;
+
+    .status-top{
+        display: flex;
+    }
+    .icon{
+        position: absolute;
+        right: 0;
+    }
 }
 
 .status-live {
