--- a/src/components/StatusElement/StatusElement.css
+++ b/src/components/StatusElement/StatusElement.css
@@ -1,17 +1,19 @@
 .status {
-  margin: 1em;
-  padding: 1rem;
-  display: flex;
-  flex-direction: column;
   justify-content: space-between;
   white-space: pre-wrap;
   transition: transform 0.6s; /* Animation off */
   transform: scale(1);
-  border: 1px solid;
 }
 .status h1, .status h2 {
   margin-top: 0.2em;
   margin-bottom: 0.2em;
+}
+.status .status-top {
+  display: flex;
+}
+.status .icon {
+  position: absolute;
+  right: 0;
 }
 
 .status:hover {
