--- a/src/components/StatusPods/StatusPods.css
+++ b/src/components/StatusPods/StatusPods.css
@@ -6,11 +6,11 @@
   max-width: 960px;
   padding: 2em;
   margin: 2em auto;
-  margin-top: 1;
+  margin-top: 5em;
   box-shadow: inset 0px 0px 20px rgba(0, 0, 0, 0.384);
   background-color: rgb(240, 240, 240);
 }
-.status-pods .btn {
+.status-pods .red-button {
   background-color: #fd4365;
   color: white;
 }
