--- a/src/components/ToolTip/ToolTip.scss
+++ b/src/components/ToolTip/ToolTip.scss
@@ -82,30 +82,30 @@
   
 	position: absolute;
 	z-index: 1;
-	top: 80%;
+	top: 76.5%;
 	margin-left: -70px;
 }
 
 .type-fully-operational{
-	background-color: #b4fe8a;
+	background-color: #6FCF97;
 }
 .type-fully-operational:hover .tooltiptext {
 	visibility: visible;
 }
 .type-semi-operational{	
-	background-color: #fef68a;
+	background-color: #FFC42D;
 }
 .type-semi-operational:hover .tooltiptext {
 	visibility: visible;
 }
 .type-offline{
-	background-color: #fea18a;
+	background-color: #ff3157;
 }
 .type-offline:hover .tooltiptext {
 	visibility: visible;
 }
 .type-unknown{
-	background-color: #b6b6b6;
+	background-color: #000000;
 }
 .type-unknown:hover .tooltiptext {
 	visibility: visible;
